# multi_agent_mcp_a2a_researcher

./: .gitignore  README.md  acp_server.py  config.py  main.py  mcp_utils.py  pyproject.toml  retriever.py  supervisor.py  trafilatura_settings.cfg
agents/: critic.py  planner.py  research.py
mcp_servers/: report_mcp.py  search_mcp.py
output/: mazda_cx5_length_report.md
