[project]
name = "multi-agent-mcp-a2a-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acp-sdk>=1.0.3",
    "cohere>=5.21.1",
    "ddgs>=9.13.0",
    "fastmcp>=3.2.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.30.0",
    "pypdf>=6.9.2",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "trafilatura>=2.0.0",
    "uvicorn==0.35",
]
